--- a/FrontEnd/wisata.html
+++ b/FrontEnd/wisata.html
@@ -63,20 +63,20 @@
 
       .vrContain {
         width: 100%;
-        height: auto;
-        border: 2px solid blue; /* Tambahkan 'solid' agar border terlihat */
+        height: 500px;
         display: flex; /* Agar elemen di dalamnya mengikuti layout fleksibel */
         justify-content: flex-end; /* Pusatkan panorama */
         align-items: center;
+        position: relative;
       }
 
       .panorama {
         width: 100%;
-        max-width: 700px;
-        height: auto;
+        /* max-width: 700px; */
+        height: 100%;
         background-color: #444;
         padding: 10px;
-        position: relative;
+        position: absolute;
         margin: 0 auto;
       }
 
@@ -240,19 +240,7 @@
           <h3><strong>Jam Operasional: 08:00-20:00 (Setiap Hari)</strong></h3>
           <h3><strong>Kontak: 08123456789 (Jhon Thor)</strong></h3>
           <div class="vrContain">
-            <div
-              class="panorama"
-              style="
-                width: 700px;
-                height: 500px;
-                padding: 10px;
-                top: 50%;
-                left: 50%;
-                margin-top: -260px;
-                margin-left: -360px;
-                background-color: #444;
-              "
-            >
+            <div class="panorama">
               <div class="panorama-view">
                 <div class="panorama-container">
                   <img
