--- a/FrontEnd/wisata.html
+++ b/FrontEnd/wisata.html
@@ -99,12 +99,14 @@
                 width: 100%;
                 height: 100%;
                 position: absolute;
-                -webkit-transform-style: preserve-3d;
                 transform-style: preserve-3d;
+                -webkit-transform-style: preserve-3d;
+                transform-origin: 50% 50% 750px;
                 -webkit-transform-origin: 50% 50% 750px;
-                -webkit-transform: translateZ(-150px);
                 transform: translateZ(-150px);
+                -webkit-transform: translateZ(-150px);
             }
+
             #cube img {
                 position: absolute;
                 width: 1500px;
@@ -261,7 +263,7 @@
       <!-- CONTAINER ATAS -->
       <div class="contain">
         <div class="contentSidebar">
-          <img src="img/destination-1.jpg" alt="Pantai Indah" />
+          <img src="img/pantai.jpg" alt="Pantai Indah" />
           <iframe
             frameborder="0"
             style="border: 0"
