--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -68,7 +68,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
+                        <a href="about.html" class="nav-item nav-link active">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link">Infografis</a>
                         <a href="maps.html" class="nav-item nav-link">Maps</a>
                         <a href="berita.html" class="nav-item nav-link">Berita</a>
