UMKM & desa2 lain

--- a/FrontEnd/Sodong.html
+++ b/FrontEnd/Sodong.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Desa Pasir Nangka</title>
+    <title>Desa Sodong</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -218,7 +218,7 @@
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
         <a href="" class="navbar-brand p-0">
           <a href="" class="navbar-brand p-0">
-            <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Pasir Nangka<span class="subtext">Kecamatan Tigaraksa</span></h1>
+            <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Sodong<span class="subtext">Kecamatan Tigaraksa</span></h1>
             <!-- <img src="img/logo.png" alt="Logo"> -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -260,7 +260,7 @@
     <div class="container-fluid bg-breadcrumb">
       <h3 class="text-white display-3 mb-4 text-center">
         <span class="small-text d-block">Desa</span>
-        Pasir Nangka
+        Sodong
       </h3>
     </div>
     <!-- Header End -->
@@ -272,7 +272,7 @@
     </div>
     <div class="containerProDes">
       <div class="proDes">
-        <h2>Pasir Nangka</h2>
+        <h2>Sodong</h2>
         <p><strong>Batas Desa</strong></p>
         <table>
           <tr>
