--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -146,6 +146,7 @@
         <div class="mx-auto text-center mb-5" style="max-width: 900px;">
             <h5 class="section-title px-3"> Bagan Organisasi</h5>
             <h1 class="mb-0"> Struktur Pemerintahan Kecamatan </h1>
+            <img src="img/struktur.jpg" alt="Struktur Pemerintahan Kecamatan" class="img-fluid mt-3" style="max-width: 100%; height: auto;">
         </div>
         <!--  Struktur organisasi end-->
 
