--- a/FrontEnd/wisata.html
+++ b/FrontEnd/wisata.html
@@ -264,13 +264,7 @@
       <div class="contain">
         <div class="contentSidebar">
           <img src="img/pantai.jpg" alt="Pantai Indah" />
-          <iframe
-            frameborder="0"
-            style="border: 0"
-            allowfullscreen
-            referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.318758012817!2d110.36948781477602!3d-7.785985979065649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a579bfbdb9e8f%3A0x2d82c7c81c50a5a5!2sYogyakarta!5e0!3m2!1sen!2sid!4v1700000000000"
-          ></iframe>
+          <iframe src="rute.html" width="100%" height="400px" style="border-radius: 10px; border: none;"></iframe>
         </div>
         <div class="contenDesk">
           <h2><strong>Pantai Indah</strong></h2>
