--- a/FrontEnd/wisata.html
+++ b/FrontEnd/wisata.html
@@ -17,6 +17,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
     <script src="js/jquery.panorama360.js"></script>
+
+        <!-- Leaflet Map Scripts -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+    
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet" />
     <style>
@@ -396,11 +403,67 @@
 <div class="text-container">
     <h2>Telusuri Pantai dengan Peta Interaktif</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi necessitatibus ipsum dignissimos harum debitis non qui sapiente, voluptates accusamus laborum quos voluptatum tempora culpa sequi quibusdam! Eaque labore ipsa excepturi.</p>
+    <a href="rute.html" target="_blank" class="btn-detail">Lihat Peta Lengkap</a>
 </div>
 
 <div class="map-container">
-    <iframe src="rute.html" width="100%" height="400px" style="border-radius: 10px; border: none;"></iframe>
+    <div id="map" style="height: 500px; width: 100%; border-radius: 10px;"></div>
 </div>
+
+<script>
+    const map = L.map('map').setView([-6.2514908482756955, 106.62807214954837], 13);
+
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 19,
+        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">Tracking Maps</a>'
+    }).addTo(map);
+
+    const userMarker = L.marker([-6.2514908482756955, 106.62807214954837]).addTo(map)
+        .bindPopup("Lokasi Anda");
+
+    const routingControl = L.Routing.control({
+        waypoints: [
+            L.latLng(-6.2514908482756955, 106.62807214954837),
+            L.latLng(-6.240647427622811, 106.62874609187763)
+        ],
+        createMarker: function() { return null; },
+        routeWhileDragging: true,
+        show: false // Menyembunyikan panel instruksi
+    }).addTo(map);
+
+    routingControl.on('routesfound', function(e) {
+        const bounds = L.latLngBounds(e.routes[0].coordinates.map(coord => [coord.lat, coord.lng]));
+        map.fitBounds(bounds, { padding: [20, 20] });
+    });
+
+    function updateUserLocation(position) {
+        const lat = position.coords.latitude;
+        const lng = position.coords.longitude;
+        userMarker.setLatLng([lat, lng]).update();
+
+        routingControl.setWaypoints([
+            L.latLng(lat, lng),
+            L.latLng(-6.240647427622811, 106.62874609187763)
+        ]);
+
+        routingControl.on('routesfound', function(e) {
+            const bounds = L.latLngBounds(e.routes[0].coordinates.map(coord => [coord.lat, coord.lng]));
+            map.fitBounds(bounds, { padding: [20, 20] });
+        });
+    }
+
+    function errorHandler(error) {
+        console.log("Error getting location:", error);
+    }
+
+    if (navigator.geolocation) {
+        navigator.geolocation.watchPosition(updateUserLocation, errorHandler, {
+            enableHighAccuracy: true
+        });
+    } else {
+        alert("Geolocation tidak didukung oleh browser ini.");
+    }
+</script>
 
 </section>
 
