--- a/FrontEnd/wisata.html
+++ b/FrontEnd/wisata.html
@@ -355,6 +355,21 @@
           padding: 10px;
         }
       }
+        .btn-detail {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #007BFF;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+
+    .btn-detail:hover {
+        background-color: #0056b3;
+    }
+
       
     </style>
   </head>
