--- a/FrontEnd/wisata.html
+++ b/FrontEnd/wisata.html
@@ -370,6 +370,10 @@
         background-color: #0056b3;
     }
 
+    .mx-auto.text-center.mb-5 {
+    margin-top: 50px; /* Atur sesuai kebutuhan */
+    }
+
       
     </style>
   </head>
@@ -484,18 +488,20 @@
 
 
       <!-- CONTAINER PAKETAN -->
+      <div class="mx-auto text-center mb-5">
+        <h5 class="section-title px-3"> Paket Wisata</h5>
       <div class="contentPaketan">
         <div class="paket">
           <img src="img/packages-1.jpg" alt="Hidden Gems Jogja" />
-          <button class="btn">Hidden Gems [Klik Sini]</button>
+          <a href="PaketWisata.html" class="btn">Hidden Gems [Klik Sini]</a>
         </div>
         <div class="paket">
           <img src="img/packages-2.jpg" alt="Wisata Keluarga" />
-          <button class="btn">Wisata Keluarga [Klik Sini]</button>
+          <a href="PaketWisata.html" class="btn">Hidden Gems [Klik Sini]</a>
         </div>
         <div class="paket">
           <img src="img/packages-3.jpg" alt="Jogja Magelang 2H1M" />
-          <button class="btn">Wisata 2H1M [Klik Sini]</button>
+          <a href="PaketWisata.html" class="btn">Hidden Gems [Klik Sini]</a>
         </div>
       </div>
     </div>
